--- a/resources/style.css
+++ b/resources/style.css
@@ -6,19 +6,24 @@
 }
 
 #shapes1{
-    position: absolute;
+    position: fixed;
     width: 500px;
     height: auto;
-    bottom: 10%;
+    bottom: 20%;
     right: 70%;
+    -webkit-filter:blur(1px);
+    filter:blur(1px);
 }
 
 #shapes2{
-    position: absolute;
-    width: 450px;
+    position: fixed;
+    overflow: hidden;
+    width: 250px;
     height: auto;
-    bottom: 17%;
-    right: 70%;
+    bottom: 70%;
+    left: 80%;
+    -webkit-filter:blur(2px);
+    filter:blur(2px);
 }
 
 .navbar-text{
@@ -41,13 +46,6 @@
     --bs-card-border-color: transparent;
 }
 
-/* .navbar-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-} */
-
 .card-body i{
     font-size: 54px;
     padding-right: 12px;
@@ -57,6 +55,10 @@
     box-shadow: 0px -1px 18px -10px rgba(0,0,0,0.2);
     -webkit-box-shadow: 0px -1px 18px -10px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px -1px 18px -10px rgba(0,0,0,0.2);
+}
+
+#card-lang-tools{
+    background-color: white;
 }
 
 .col .footer a{
@@ -82,4 +84,10 @@
     box-shadow: 0px 0px 10px 1px #ea9658;
     color: #ea9658;
     border-radius: 5px;
+}
+
+@media (max-width:600px) {
+    #shapes1{
+        right: 40%;
+    }
 }
