--- a/resources/style.css
+++ b/resources/style.css
@@ -1,93 +1,69 @@
-/* FONT POPPINS */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 
 *{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Fraunces', serif;
 }
 
-#shapes1{
-    position: fixed;
-    width: 500px;
-    height: auto;
-    bottom: 20%;
-    right: 70%;
-    -webkit-filter:blur(1px);
-    filter:blur(1px);
-}
-
-#shapes2{
-    position: fixed;
-    overflow: hidden;
-    width: 250px;
-    height: auto;
-    bottom: 70%;
-    left: 80%;
-    -webkit-filter:blur(2px);
-    filter:blur(2px);
-}
-
-.navbar-text{
-    font-weight: bold;
+.navbar-brand, .nav-link{
     font-size: 18px;
+    color: black;
 }
 
-.navbar-nav{
-    display: flex;
-    flex-direction: row;
-}
-
-.container{
-    margin-bottom: 70px;
-    background-color: transparent;
-    padding: 12px 12px 12px 12px;
-}
-
-.container .card{
-    --bs-card-border-color: transparent;
-}
-
-.card-body i{
-    font-size: 54px;
-    padding-right: 12px;
-}
-
-.col .card{
-    box-shadow: 0px -1px 18px -10px rgba(0,0,0,0.2);
-    -webkit-box-shadow: 0px -1px 18px -10px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0px -1px 18px -10px rgba(0,0,0,0.2);
-}
-
-#card-lang-tools{
-    background-color: white;
-}
-
-.col .footer a{
-    background-color: #074456;
-    border-color: #ea9658;
+.nav-link:hover{
     color: #ea9658;
 }
 
-.col .footer a:hover{
-    background-color: #ea9658;
-    color: #074456;
+.row-desc{
+    margin-top: 8rem;
 }
 
-.remixicon{
-    padding: 2px;
-    color: #074456;
-    border-radius: 5px;
-    transition: 0.3s;
+.github-profile .row{
+    margin-right: 0;
+    text-align: end;
+    margin-right: 1rem;
 }
 
-.remixicon:hover{
-    padding: 2px;
-    box-shadow: 0px 0px 10px 1px #ea9658;
-    color: #ea9658;
-    border-radius: 5px;
+#github-name{
+    font-size: 70px;
+    margin: 0;
 }
 
-@media (max-width:600px) {
-    #shapes1{
-        right: 40%;
+#github-title{
+    font-family: 'Epilogue', sans-serif;
+}
+
+.reposCard{
+    transition: all .3s ease-in-out;
+}
+
+.reposCard:hover{
+    transform: scale(1.1);
+}
+
+#more-repos{
+    font-size: 16px;
+}
+
+.navbar-bottom{
+    margin-top: 8rem;
+}
+
+#connect-w-m{
+    font-family: 'Epilogue', sans-serif;
+}
+
+body{
+    padding-bottom: 50px;
+}
+
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+
+@media only screen and (max-width: 1200px) {
+    .github-profile .row{
+        text-align: start;
     }
-}
+  }
+
